@@ -5,16 +5,18 @@ AUX 0.10.2-wheel-buttons.patch 457 RMD160 bb4130d27878da4954996ffac46126aa8e4a5c
 DIST xf86-input-wacom-0.10.0.tar.bz2 314449 RMD160 26e7d7cfbd91170cca22d7a5a8369cf449d15938 SHA1 e05f53485ebaad51be9784fbc022ce819362271f SHA256 8f7f5af2ce6350a3b8f54368dd67b78e303881f738d3169f67869e297d431018
 DIST xf86-input-wacom-0.10.1.tar.bz2 328350 RMD160 525b702bda0868e169fbdd43dfbbc5f7c81c946a SHA1 106f7fcf9e4255b5b3efa29bccc8ed94d42cfb2d SHA256 51f45328f3b2973afba28b495b61fd04c8560aa1337588b9034e80147e891aac
 DIST xf86-input-wacom-0.10.2.tar.bz2 331661 RMD160 b39adeedba8b0eb77afaf1679e45f5107d40932c SHA1 38301644c37ad6e99638615390c443420fdac70b SHA256 96b8ef6810ce19ed9d993eef4a84e0545f270ec6c1bddd147ee1ec1fb252fd93
-EBUILD xf86-input-wacom-0.10.0.ebuild 700 RMD160 7b1ef6e6cc176d47b8904fd5a3e6fb59bc196bb3 SHA1 16c0fe8176f5c528e0cf47d051ab04ebea6acdb5 SHA256 66f644a0ac2a1b3bf86eb8ca2f6b573af3d57c7ca4fb51548bb06d2734bc5f14
-EBUILD xf86-input-wacom-0.10.1.ebuild 1388 RMD160 ac1a0853cc60810e6c30e9401d69b6c6cbb1421e SHA1 f3df94018a27adddf31b182f2c44bee78e0eba2e SHA256 ba80fc513e8624963b951535bebf925981c085fdfdc4f2499a1b82720fbff957
-EBUILD xf86-input-wacom-0.10.2-r1.ebuild 1489 RMD160 a5bba1a45e4e4cb60e27afd5191eab3e42b96fbe SHA1 9880c44b028a0ced2fc1fa21f0d120c69a0dee69 SHA256 93481d7c1960653bdd9ff51c453eb207cbef4d2691b17f2e5f4d14bc3b531fcd
-EBUILD xf86-input-wacom-0.10.2.ebuild 1388 RMD160 dcb487e5b52e2b11c81cb17621f9b30e375df7cb SHA1 040c901c8ecee6b32ba303d1c4c4cc59cf4524bd SHA256 edb3d2652abc12c3a2fb3f78a05177b113d8991aabd1876ed9adcc31e915ee74
-MISC ChangeLog 1381 RMD160 bff5a2835f4d156334c182715118739e44df0105 SHA1 241bb7a1b5cb00e3fa18ea3857ddba9e124f52af SHA256 1e8f05d73af4b6c1698b85a46a039dfb73c37785648a54e831a5aa25d05f3084
+EBUILD xf86-input-wacom-0.10.0.ebuild 767 RMD160 a7225c165e9e89fad72bdb560a45ca3c34c21ee4 SHA1 15e044a63be7d62f7469e49c143588959b848870 SHA256 e082d43717e93aa55a74c7f977944d2c78e3b105d27f1e908b4dfdf0244d0b93
+EBUILD xf86-input-wacom-0.10.1.ebuild 1453 RMD160 d78d80d8f1694b0109b7eaa22e80c81f8970f7a5 SHA1 dea0c27a6cefb3cba9f88ad9cb486dcd970f9831 SHA256 8573e04adeee18d511a17f0a320ea19e216a75665001adea5a1a851a0d0b91e7
+EBUILD xf86-input-wacom-0.10.2-r1.ebuild 1554 RMD160 380f715df446ff43598054a48f9331bfbd8d4531 SHA1 5d243bb11586f7889ed437c35537b6d61b7ab278 SHA256 3b971de497666ea2a140b7e7b4318a6b82f1004a4fb24458212a05432e7d8e08
+EBUILD xf86-input-wacom-0.10.2.ebuild 1453 RMD160 e692721ff5e562829d1b9c4f4e0b25618860e196 SHA1 3b6d6a0401742ed6aa85fd89a61c5622bea93ee7 SHA256 2bc4ed919cbbaca5a2b210f2a85408b23a361938b207444ab1bcd9c0a2a013e9
+MISC ChangeLog 1691 RMD160 d9c9370796c733431014345f4f2be88cac13d6bf SHA1 515ec9601835d37e16edc8d7f3970d3f5ceaf011 SHA256 e32cb8b0984481a97425c4a6b827bdb2b2b618b9f48a8f155aa112bf47feb24f
 MISC metadata.xml 463 RMD160 ea957ebc67ed3a8f547fe3d7b107f9701774d10d SHA1 caad3bca0f0ce0e4268f54afe46d92844e649521 SHA256 58f9dfab03bab19b4e72dc6aff968a1fe881c04cefce077c19469cf7a9390a5b
+MISC xf86-input-wacom-0.10.1.ebuild.orig 1388 RMD160 ac1a0853cc60810e6c30e9401d69b6c6cbb1421e SHA1 f3df94018a27adddf31b182f2c44bee78e0eba2e SHA256 ba80fc513e8624963b951535bebf925981c085fdfdc4f2499a1b82720fbff957
+MISC xf86-input-wacom-0.10.1.ebuild.rej 440 RMD160 324d23e26b9b1dd59f990555bf5c4afe6f1556ff SHA1 09d8489a868869737aa219400652a872f64f3e0e SHA256 250fce13541ebb01d97c358af22eb4941908af58c0b4176172e645f10e58f1d0
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.13 (GNU/Linux)
 
-iEYEARECAAYFAksW05YACgkQu7rWomwgFXp/4QCgs71qe6kUMIa737KCiUiW5vEU
-UIwAoKRZ7xCwxeX8qQIB4ltyxMEJ8Znf
-=XLtI
+iEYEARECAAYFAksgtwcACgkQ/ejvha5XGaPHFQCg2Fp0JcwHvhJ3KjmaYiUgGYZx
+3rYAoNtg8T5e+GAl8/MVwzmgjZMuPxVk
+=X5ZF
 -----END PGP SIGNATURE-----
