@@ -1,6 +1,6 @@
 # Copyright 1999-2009 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/x11-drivers/xf86-input-wacom/xf86-input-wacom-0.10.0.ebuild,v 1.3 2009/11/05 22:54:58 remi Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-drivers/xf86-input-wacom/xf86-input-wacom-0.10.0.ebuild,v 1.4 2009/12/10 08:51:36 zmedico Exp $
 
 inherit x-modular
 
@@ -13,8 +13,10 @@ EGIT_REPO_URI="git://anongit.freedesktop.org/~whot/xf86-input-wacom"
 KEYWORDS="~amd64 ~ppc ~ppc64 ~x86"
 IUSE="debug"
 
-RDEPEND=">=x11-base/xorg-server-1.6"
-DEPEND="${RDEPEND}
+COMMON_DEPEND=">=x11-base/xorg-server-1.6"
+RDEPEND="${COMMON_DEPEND}
+	!x11-drivers/linuxwacom"
+DEPEND="${COMMON_DEPEND}
 	x11-proto/inputproto
 	x11-proto/xproto"
 
