@@ -1,6 +1,12 @@
 # ChangeLog for x11-drivers/xf86-input-wacom
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-drivers/xf86-input-wacom/ChangeLog,v 1.6 2009/12/02 20:52:21 ikelos Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-drivers/xf86-input-wacom/ChangeLog,v 1.7 2009/12/10 08:51:36 zmedico Exp $
+
+  10 Dec 2009; Zac Medico <zmedico@gentoo.org>
+  xf86-input-wacom-0.10.0.ebuild, xf86-input-wacom-0.10.1.ebuild,
+  xf86-input-wacom-0.10.2.ebuild, xf86-input-wacom-0.10.2-r1.ebuild:
+  Bug #296216 - Block linuxwacom since retroactive blockers don't
+  necessarily work for packages that are already installed.
 
 *xf86-input-wacom-0.10.2-r1 (02 Dec 2009)
 
